var colors + sticky header + text wrap + fixed tabs borders + big toggle button and input

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,25 @@
+/*в процессе
+еще надо:
+починить кнопочки
+разобраться с бордером
+доступность элементов при управлении с клавиатурой
+что-то еще*/
+
+:root {
+	--border-color: #E6E6E6;
+	--header-color: #CCCCCC;
+	--placeholder-color: #CCCCCC;
+	--item-text-color: #666666;
+	--body-background-color: #F2F2F2;
+	--main-container-background-color: #FFFFFF;
+	--selected-tab-border-color: #EBDFDF;
+	--hovered-item-color: #FAFAFA;
+	--button-background-color: #FFFFFF;
+	--footer-text-color: #888888;
+}
+
 body {
-    background-color: #F2F2F2;
+    background-color: var(--body-background-color);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,36 +30,39 @@ body {
 h1 {
     font-size: 100px;
     font-weight: 200;
-    color: #CCCCCC;
+    color: var(--header-color);
     margin-top: 0;
     margin-bottom: 0;
 }
 
 .main-container {
-    background-color: #FFFFFF;
+    background-color: var(--main-container-background-color);
     width: 562px;
-    height: 402px;
+    min-height: 402px;
     /*замечание про фиксированные размеры помню, просто пока не знаю, как это решить*/
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     border-spacing: 0;
 }
 
 .new-task {
-	width: 100%;
-    height: 14.5%;
+    height: 62px;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #E6E6E6;
+    border-bottom: 1px solid var(--border-color);
+    position: sticky;
+    top: 0;
 }
 
 .toggle-btn {
     background: url(../icons/select-all.png) no-repeat;
-    width: 28px;
-	height: 16px;
+    background-size: 28px 16px;
+    background-position: center;
+    background-color: var(--button-background-color);
+	width: 62px;
+    height: 100%;
     border: none;
-    margin-left: 17px;
-	margin-right: 17px;
 }
+
 
 /*а чтобы проверить, что оно работает, надо купить мак..?*/
 @media 
@@ -56,44 +79,54 @@ h1 {
     }
 }
 
+.toggle-btn:hover {
+	border: 1px dashed;
+}
+
 input[type="text"] {
     font-family: Roboto, sans-serif;
     font-style: italic;
     font-weight: 300;
     font-size: 24px;
     border: none;
+    border-bottom: 1px solid var(--border-color);
     width: 100%;
+    height: 100%;
 }
 
 ::placeholder {
-    color: #CCCCCC;
+    color: var(--placeholder-color);
 }
 
 
 main {
-	height: 74%;
+	/*height: 74%;*/
 }
 
 ul {
     margin: 0 0 0 0;
     padding: 0 0 0 0;
     list-style-type: none;
-    height: 100%;
+    min-height: 296px;
 }
 
 li {
-	height: 20%;
+	/*height: 20%;*/
+	min-height: 62px;
+}
+
+span {
+	overflow-wrap: break-word;
 }
 
 .task-item {
     font-weight: 300;
     font-size: 24px;
     text-align: left;
-    color: #666666;
-    height: 100%;
-    width: 100%;
+    color: var(--item-text-color);
+    min-height: 62px;
     box-shadow: inset 0px -1px 0px #E6E6E6;
-    /*border: 1px solid #E6E6E6;*/
+    /*border: 1px solid #E6E6E6;
     /*с бордером что-то пошло не так...(((*/
 
     display: flex;
@@ -103,13 +136,14 @@ li {
 }
 
 
+
 /*над красивыми чекбоксами пока думаю*/
 input[type="checkbox"] {
     margin: 11px 11px;
 }
 
 .custom-checkbox:checked + span {
-	color: #CCCCCC;
+	color: var(--item-text-color);
 	text-decoration: line-through;
 }
 
@@ -120,17 +154,17 @@ input[type="checkbox"] {
 .remove-btn {
     background: url(../icons/close.png) no-repeat;
     background-size: 20px 20px;
-	width: 20px;
-	height: 20px;
+	width: 62px;
+    height: 62px;
+    background-position: center
 	border: none;
-    margin-right: 11px;
     visibility: hidden;
 }
 
 @media 
 (-webkit-min-device-pixel-ratio: 2), 
 (min-resolution: 192dpi) { 
-    .toggle-btn {
+    .remove-btn {
     	background: url(../icons/close@2x.png) no-repeat;
     	background-size: 20px 20px;
     	width: 20px;
@@ -141,8 +175,12 @@ input[type="checkbox"] {
     }
 }
 
+.remove-btn:hover {
+	border: 1px dashed;
+}
+
 li:hover {
-	background-color: #FAFAFA;
+	background-color: var(--hovered-item-color);
 }
 
 li:hover .remove-btn {
@@ -150,8 +188,7 @@ li:hover .remove-btn {
 }
 
 footer {
-    width: 100%;
-    height: 9.5%;
+    height: 44px;
 
     font-family: Roboto, sans-serif;
     font-style: normal;
@@ -163,8 +200,8 @@ footer {
   	justify-content: space-between;
   	align-items: center;
 
-    color: #888888;
-    border: 1px solid #E6E6E6;
+    color: var(--footer-text-color);
+    border: 1px solid var(--border-color);
 }
 
 .task-counter {
@@ -183,10 +220,11 @@ footer {
 
 .radio-btn label {
 	padding: 2px 5px;
+	border: 1px solid transparent;
 }
 
 .radio-btn input[type="radio"]:checked + label {
-	border: 1px solid #EBDFDF;
+	border: 1px solid var(--selected-tab-border-color);
     border-radius: 5px;
 }
 
@@ -194,8 +232,8 @@ footer {
     font-family: Roboto, sans-serif;
     font-weight: 300;
     font-size: 14px;
-    color: #888888;
-    background-color: #FFFFFF;
+    color: var(--clear-button-text-color);
+    background-color: var(--button-background-color);
     border: none;
     margin-right: 12px;
 }
